[gd_scene load_steps=9 format=3 uid="uid://b4wtffmvaiwoi"]

[ext_resource type="Script" path="res://behaviour.gd" id="1_c28es"]
[ext_resource type="Texture2D" uid="uid://ditukttkebf66" path="res://behaviour-editor-icons/behaviour_base.png" id="1_p5ur3"]
[ext_resource type="FontFile" uid="uid://cl2wx61lqptyp" path="res://Poppins-Medium.ttf" id="2_s5bn5"]
[ext_resource type="Texture2D" uid="uid://b80uto6lwc48v" path="res://behaviour-editor-icons/output.png" id="4_du0gf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp1u4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_vkyec"]
font = ExtResource("2_s5bn5")

[sub_resource type="LabelSettings" id="LabelSettings_v6wfh"]
font = ExtResource("2_s5bn5")
font_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7c7r"]
bg_color = Color(0, 0.733333, 0.470588, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
anti_aliasing = false

[node name="Behaviour" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -96.0
offset_top = -136.0
offset_right = 96.0
pivot_offset = Vector2(96, 68)
script = ExtResource("1_c28es")
metadata/child = true
metadata/has_nubs = true
metadata/colour = Color(0.313726, 0.243137, 0.588235, 1)
metadata/name = "hyper Ai meta verse behaviour"
metadata/being_placed = true
metadata/nickname = ""
metadata/id = ""
metadata/catergory = ""
metadata/values = []
metadata/active = true
metadata/outputs = []
metadata/show_output = false
metadata/description = ""

[node name="Connection" type="Line2D" parent="."]
z_index = -1
position = Vector2(96, 0)
width = 12.0
default_color = Color(0.313726, 0.431373, 0.588235, 1)

[node name="Base" type="Panel" parent="."]
layout_mode = 0
offset_right = 192.0
offset_bottom = 136.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cp1u4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Function"
label_settings = SubResource("LabelSettings_vkyec")
horizontal_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 0
text = "Function"
label_settings = SubResource("LabelSettings_v6wfh")
horizontal_alignment = 1

[node name="BaseButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_p5ur3")
ignore_texture_size = true
stretch_mode = 0

[node name="Nubs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 52.0
offset_right = 96.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 160
alignment = 1

[node name="Output" type="Panel" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = -12.0
offset_right = 204.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7c7r")

[node name="OutputBotton" type="TextureButton" parent="Output"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 22.0
offset_bottom = 20.0
texture_normal = ExtResource("4_du0gf")
ignore_texture_size = true
stretch_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="BaseButton" to="." method="_on_base_button_button_down"]
[connection signal="button_up" from="BaseButton" to="." method="_on_base_button_button_up"]
[connection signal="mouse_entered" from="BaseButton" to="." method="_on_base_button_mouse_entered"]
[connection signal="mouse_exited" from="BaseButton" to="." method="_on_base_button_mouse_exited"]
[connection signal="button_down" from="Output/OutputBotton" to="." method="_on_output_botton_button_down"]
